# nonebot-plugin-picstatus

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: black.yml  pypi-publish.yml
demo/: demo.py
examples/external_example/: README.md  __init__.py  bg_provider.py  collectors.py
examples/external_example/templates/: __init__.py
examples/external_example/templates/example_template/: __init__.py
examples/external_example/templates/example_template/res/: index.html.jinja
nonebot_plugin_picstatus/: __init__.py  __main__.py  bg_provider.py  config.py  const.py  debug.py  draw.py  misc_statistics.py  render.py  statistics.py  status.py  util.py  version.py
nonebot_plugin_picstatus/collectors/: __init__.py  bot.py  cpu.py  disk.py  mem.py  misc.py  network.py  process.py
nonebot_plugin_picstatus/components/: __init__.py  cpu_mem.py  disk.py  footer.py  header.py  network.py  process.py
nonebot_plugin_picstatus/res/css/: index.css  no-shadow.css  theme-dark.css  theme-vanilla.css
nonebot_plugin_picstatus/res/js/: globalThis.d.ts  init-global.js  lazy-load.js  load-plugin.js  preload.js
nonebot_plugin_picstatus/res/templates/: cpu_mem.html.jinja  disk.html.jinja  footer.html.jinja  header.html.jinja  index.html.jinja  network.html.jinja  process.html.jinja
nonebot_plugin_picstatus/templates/: __init__.py  pw_render.py
nonebot_plugin_picstatus/templates/default/: __init__.py
nonebot_plugin_picstatus/templates/default/res/css/: no-blur.css  no-radius.css
nonebot_plugin_picstatus/templates/default/res/templates/: index.html.jinja  macros.html.jinja
