[project]
name = "nonebot-plugin-picstatus"
dynamic = ["version"]
description = "A NoneBot2 plugin generates a picture which shows the status of current device"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.1",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-alconna>=0.54.2",
    "nonebot-plugin-userinfo>=0.2.6",
    "nonebot-plugin-htmlrender>=0.5.1",
    "cookit[jinja,loguru,playwright,pydantic]>=0.9.3",
    "psutil>=6.1.1",
    "py-cpuinfo>=9.0.0",
    "anyio>=4.8.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.5",
    "yarl>=1.18.3",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-picstatus"

[tool.pdm]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_picstatus/__init__.py"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
